fixed target _blank in re directions

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </nav>
 
         <!-- GITHUB ICON -->
-        <a class="navbar-brand gap icon-resp" href="https://github.com/CristianLopez3">
+        <a class="navbar-brand gap icon-resp" href="https://github.com/CristianLopez3"  target="_blank">
           <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path class="path icon-resp" fill-rule="evenodd" clip-rule="evenodd"
               d="M20 0C8.95 0 0 9.17637 0 20.5059C0 29.5797 5.725 37.2438 13.675 39.9608C14.675 40.1403 15.05 39.5251 15.05 38.9868C15.05 38.4998 15.025 36.8849 15.025 35.1676C10 36.116 8.7 33.9116 8.3 32.7581C8.075 32.1686 7.1 30.3487 6.25 29.8617C5.55 29.4772 4.55 28.5288 6.225 28.5032C7.8 28.4775 8.925 29.9898 9.3 30.605C11.1 33.7065 13.975 32.835 15.125 32.2968C15.3 30.9639 15.825 30.0667 16.4 29.5541C11.95 29.0414 7.3 27.2728 7.3 19.4293C7.3 17.1993 8.075 15.3538 9.35 13.9184C9.15 13.4057 8.45 11.3039 9.55 8.4843C9.55 8.4843 11.225 7.94603 15.05 10.5862C16.65 10.1248 18.35 9.89409 20.05 9.89409C21.75 9.89409 23.45 10.1248 25.05 10.5862L30.55 8.4843C31.65 11.3039 30.95 13.4057 30.75 13.9184C32.025 15.3538 32.8 17.1737 32.8 19.4293C32.8 27.2984 28.125 29.0414 23.675 29.5541C24.4 30.1949 25.025 33.3477 25.025 33.3477C25.025 36.0903 25 38.2947 25 38.9868C25 39.5251 25.375 40.1659 26.375 39.9608C34.275 37.2438 40 29.5541 40 20.5059C40 9.17637 31.05 0 20 0Z"
@@ -76,7 +76,7 @@
         </a>
 
         <!-- GMAIL ICON -->
-        <a class="navbar-brand gap icon-resp" href="#">
+        <a class="navbar-brand gap icon-resp" href="mailto::cristian.c.lopez.m@gmail.com"  target="_blank">
           <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_181_335)">
               <path
@@ -101,7 +101,7 @@
         </a>
 
         <!-- LINKEDIN ICON -->
-        <a class="navbar-brand gap icon-resp" href="https://www.linkedin.com/in/cristian-lopez-software/">
+        <a class="navbar-brand gap icon-resp" href="https://www.linkedin.com/in/cristian-lopez-software/" target="_blank">
           <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M37.0391 0H2.95312C1.32031 0 0 1.28906 0 2.88281V37.1094C0 38.7031 1.32031 40 2.95312 40H37.0391C38.6719 40 40 38.7031 40 37.1172V2.88281C40 1.28906 38.6719 0 37.0391 0ZM11.8672 34.0859H5.92969V14.9922H11.8672V34.0859ZM8.89844 12.3906C6.99219 12.3906 5.45312 10.8516 5.45312 8.95312C5.45312 7.05469 6.99219 5.51562 8.89844 5.51562C10.7969 5.51562 12.3359 7.05469 12.3359 8.95312C12.3359 10.8438 10.7969 12.3906 8.89844 12.3906ZM34.0859 34.0859H28.1562V24.8047C28.1562 22.5938 28.1172 19.7422 25.0703 19.7422C21.9844 19.7422 21.5156 22.1562 21.5156 24.6484V34.0859H15.5938V14.9922H21.2812V17.6016H21.3594C22.1484 16.1016 24.0859 14.5156 26.9688 14.5156C32.9766 14.5156 34.0859 18.4688 34.0859 23.6094V34.0859Z"
@@ -139,7 +139,7 @@
 
 
     <!-- TECHNOLOGIES SECTION -->
-    <section class="container" id="technologies" data-aos="flip-up" data-aos-duration="1500">
+    <section class="container" id="technologies" data-aos="fade" data-aos-duration="2500">
 
       <h2>Technologies & Tools</h2>
 
@@ -359,7 +359,7 @@
           <div class="social-net">
 
             <div class="red">
-              <a href="gmail.com">
+              <a href="mailto::cristian.c.lopez.m@gmail.com"  target="_blank">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g clip-path="url(#clip0_181_335)">
                     <path
@@ -385,7 +385,7 @@
             </div>
 
             <div class="content">
-              <a href="gmail.com">
+              <a href="mailto::cristian.c.lopez.m@gmail.com"  target="_blank">
                 <h3>cristian.c.lopez.m@gmail.com</h3>
               </a>
             </div>
@@ -396,7 +396,7 @@
           <div class="social-net">
 
             <div class="red">
-              <a class="navbar-brand gap" href="https://github.com/CristianLopez3">
+              <a class="navbar-brand gap" href="https://github.com/CristianLopez3"  target="_blank">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path class="path" fill-rule="evenodd" clip-rule="evenodd"
                     d="M20 0C8.95 0 0 9.17637 0 20.5059C0 29.5797 5.725 37.2438 13.675 39.9608C14.675 40.1403 15.05 39.5251 15.05 38.9868C15.05 38.4998 15.025 36.8849 15.025 35.1676C10 36.116 8.7 33.9116 8.3 32.7581C8.075 32.1686 7.1 30.3487 6.25 29.8617C5.55 29.4772 4.55 28.5288 6.225 28.5032C7.8 28.4775 8.925 29.9898 9.3 30.605C11.1 33.7065 13.975 32.835 15.125 32.2968C15.3 30.9639 15.825 30.0667 16.4 29.5541C11.95 29.0414 7.3 27.2728 7.3 19.4293C7.3 17.1993 8.075 15.3538 9.35 13.9184C9.15 13.4057 8.45 11.3039 9.55 8.4843C9.55 8.4843 11.225 7.94603 15.05 10.5862C16.65 10.1248 18.35 9.89409 20.05 9.89409C21.75 9.89409 23.45 10.1248 25.05 10.5862L30.55 8.4843C31.65 11.3039 30.95 13.4057 30.75 13.9184C32.025 15.3538 32.8 17.1737 32.8 19.4293C32.8 27.2984 28.125 29.0414 23.675 29.5541C24.4 30.1949 25.025 33.3477 25.025 33.3477C25.025 36.0903 25 38.2947 25 38.9868C25 39.5251 25.375 40.1659 26.375 39.9608C34.275 37.2438 40 29.5541 40 20.5059C40 9.17637 31.05 0 20 0Z"
@@ -407,7 +407,7 @@
             </div>
 
             <div class="content">
-              <a href="https://github.com/CristianLopez3">
+              <a href="https://github.com/CristianLopez3"  target="_blank">
                 <h3>@CristianLopez3</h3>
               </a>
             </div>
@@ -418,7 +418,7 @@
           <div class="social-net">
 
             <div class="red">
-              <a class="navbar-brand gap" href="https://www.linkedin.com/in/cristian-lopez-software/">
+              <a class="navbar-brand gap" href="https://www.linkedin.com/in/cristian-lopez-software/"  target="_blank">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M37.0391 0H2.95312C1.32031 0 0 1.28906 0 2.88281V37.1094C0 38.7031 1.32031 40 2.95312 40H37.0391C38.6719 40 40 38.7031 40 37.1172V2.88281C40 1.28906 38.6719 0 37.0391 0ZM11.8672 34.0859H5.92969V14.9922H11.8672V34.0859ZM8.89844 12.3906C6.99219 12.3906 5.45312 10.8516 5.45312 8.95312C5.45312 7.05469 6.99219 5.51562 8.89844 5.51562C10.7969 5.51562 12.3359 7.05469 12.3359 8.95312C12.3359 10.8438 10.7969 12.3906 8.89844 12.3906ZM34.0859 34.0859H28.1562V24.8047C28.1562 22.5938 28.1172 19.7422 25.0703 19.7422C21.9844 19.7422 21.5156 22.1562 21.5156 24.6484V34.0859H15.5938V14.9922H21.2812V17.6016H21.3594C22.1484 16.1016 24.0859 14.5156 26.9688 14.5156C32.9766 14.5156 34.0859 18.4688 34.0859 23.6094V34.0859Z"
@@ -429,7 +429,7 @@
             </div>
 
             <div class="content">
-              <a href="https://www.linkedin.com/in/cristian-lopez-software/">
+              <a href="https://www.linkedin.com/in/cristian-lopez-software/"  target="_blank">
                 <h3>Cristian Camilo Lopez Martinez</h3>
               </a>
             </div>
@@ -463,10 +463,7 @@
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-      <div>
-        Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images,
-        lists, etc.
-      </div>
+
 
       <ul class="dropdown-menu">
         <li class="nav-item">
