icon and button change theme

--- a/index.html
+++ b/index.html
@@ -15,7 +15,26 @@
 </head>
 
 <body id="my-landing">
-  <button id="change-theme">Cambiar Hoja de Estilos</button>
+
+
+
+
+
+  <button id="change-theme">
+    <img src="./img/sun.svg" alt="s" id="icon-theme">
+  </button>
+
+
+
+
+
+
+
+
+
+
+
+
   <!-- HEADER  -->
   <header class="container" id="header">
     <!-- Navbar -->
@@ -28,7 +47,7 @@
           <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
               aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-              <img src="./img/commit.svg" alt="nav-toggle" class="icon-resp">
+              <img src="./img/commit.svg" alt="nav-toggle" class="icon-resp bg-black">
             </button>
 
             <div class="all-offcanvas offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
@@ -169,14 +188,14 @@
 
         <div class=" card-tech-container">
           <figure class="tech-card">
-            <img src="./img/tecnologies/github.svg" alt="github">
+            <img src="./img/tecnologies/github.svg" class="bg-black" alt="github">
             <caption>GtiHub</caption>
           </figure>
         </div>
 
         <div class=" card-tech-container">
           <figure class="tech-card">
-            <img src="./img/tecnologies/mysql.svg" alt="mysql">
+            <img src="./img/tecnologies/mysql.svg" class="bg-black" alt="mysql">
             <caption>MySQL</caption>
           </figure>
         </div>
